force-app/main/default/objects/Visit_Result_Type_Sharing__c/Visit_Result_Type_Sharing__c.object-meta.xml
<CustomObject>
    <label>Visit Result Type Sharing</label>
    <nameField>
        <label>Visit Result Type Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Result Type Sharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>