force-app/main/default/objects/Visit_Result_Type_Sharing__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Visit Result Type Sharings</relationshipLabel>
    <relationshipName>Visit_Result_Type_Sharings</relationshipName>
    <type>Lookup</type>
</CustomField>