force-app/main/default/objects/Visit_Result_Type_Sharing__c/fields/Include_Countries__c.field-meta.xml
<CustomField>
    <fullName>Include_Countries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Countries</label>
    <type>Checkbox</type>
</CustomField>