force-app/main/default/objects/Visit_Result_Type_Sharing__c/fields/Sharing_Countries__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Countries__c</fullName>
    <label>Sharing Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>